--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,24 @@
-/node_modules/
-/public/build/
+# build output
+dist/
+# generated types
+.astro/
 
+# dependencies
+node_modules/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
 .DS_Store
 
-.vercel
+# jetbrains setting folder
+.idea/
