--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "mcsite",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/mdx": "^4.3.9",
-    "@tailwindcss/vite": "^4.1.16",
-    "@types/canvas-confetti": "^1.9.0",
-    "astro": "^5.15.3",
-    "canvas-confetti": "^1.9.3",
-    "tailwindcss": "^4.1.16"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.3.4"
-  }
+	"name": "mcsite",
+	"type": "module",
+	"version": "0.0.1",
+	"engines": {
+		"node": "22"
+	},
+	"scripts": {
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/mdx": "4.3.9",
+		"@tailwindcss/vite": "4.1.16",
+		"@types/canvas-confetti": "1.9.0",
+		"astro": "5.15.3",
+		"canvas-confetti": "1.9.3",
+		"tailwindcss": "4.1.16"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.4"
+	}
 }
